# rust-nextjs-mc-launcher

./: .eslintrc.json  .gitignore  package.json  pnpm-lock.yaml
app/java/: jvms_repo.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/app/java/: jvms.json  jvms_repo.json
src-tauri/src/: main.rs
src-tauri/src/command/: login.rs  mod.rs
src-tauri/src/command/core/: java.rs
src-tauri/src/domain/: app.rs  login.rs  mod.rs
src-tauri/src/domain/core/: config.rs  java.rs  mod.rs
src-tauri/src/domain/ui/: mod.rs  progressBar.rs  progress_bar.rs
src-tauri/src/services/: auth.rs  mod.rs
src-tauri/src/services/core/: download.rs  java.rs  mod.rs
src/components/home/: ControllPanel.tsx  TopPanel.tsx
src/components/home/login/: Login.tsx
src/components/home/topPanel/: Login.tsx  Settings.tsx
src/components/ui/: DialogContainer.tsx
src/components/ui/widgets/: Button.tsx  ProgressBar.tsx
src/pages/: index.tsx
src/pages/api/: hello.ts
src/styles/: common.scss  fonts.scss  globals.scss  vars.scss
src/styles/home/: ControllPanel.module.scss  TopPanel.module.scss
src/styles/home/login/: Login.module.scss
src/styles/home/topPanel/: Settings.module.scss
src/styles/pages/: Home.module.scss
src/styles/ui/: DialogContainer.module.scss
src/styles/ui/widgets/: Button.module.scss  ProgressBar.module.scss
