[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.59"
proc-macro = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.4", features = [] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.70"
minecraft-msa-auth = "0.3.0"
reqwest = { version = "0.11.16", features = ["json", "stream"] }
oauth2 = "4.3.0"
open = "4.0.1"
lazy_static = "1.4.0"
uuid = { version = "1.3.0", features = ["serde"] }
syn = "2.0.13"
quote = "1.0"
async-trait = "0.1.68"
piz = "0.5.1"
rayon = "1.7.0"
futures-util = "0.3.28"


[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
